# bevorai-api

./: .coverage  .dockerignore  .env.example  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  fly.api.prod.toml  fly.api.staging.toml  fly.prod.toml  fly.staging.toml  fly.toml  fly.worker.staging.toml  fly.worker.toml  prometheus.yml  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: black.yml  ci.yml  docs.yml  fly-deploy.prod.yml  fly-deploy.staging.yml  image.yml  pytest.yml  release.yml  test.yml
app/: cache.py  config.py  cron.py  enums.py  jobs.py  main.py  metrics.py  openapi.py  prometheus.py  types.py  websocket.py  worker.py
app/ai/: eval.py  routes.py
app/ai/services/: eval.py
app/api/: dependencies.py  middlewares.py  openapi.py  urls.py
app/api/admin/: interface.py  router.py  service.py
app/api/ai/: eval.py  pipeline.py  webhook.py
app/api/analytics/: audits.py  user.py
app/api/app/: interface.py  openapi.py  router.py  service.py
app/api/audit/: interface.py  openapi.py  router.py  service.py
app/api/auth/: generate.py  router.py  service.py  user.py
app/api/base/: router.py
app/api/blockchain/: gas.py  router.py  scan.py  service.py
app/api/chat/: interface.py  router.py  service.py
app/api/contract/: interface.py  openapi.py  router.py  service.py
app/api/core/: dependencies.py  middlewares.py
app/api/depends/: auth.py  rate_limit.py
app/api/middleware/: auth.py  metrics.py  rate_limit.py
app/api/permission/: service.py
app/api/pipeline/: audit_generation.py  types.py
app/api/platform/: interface.py  openapi.py  router.py
app/api/pricing/: service.py
app/api/routers/: __init__.py  ai.py  analytics.py  app.py  audit.py  auth.py  base.py  blockchain.py  contract.py  health.py  platform.py  static.py  status.py  user.py  websocket.py
app/api/routers/tests/: test_health.py
app/api/services/: ai.py  app.py  audit.py  auth.py  blockchain.py  common.py  contract.py  llm_pipeline.py  permission.py  static_analyzer.py  user.py
app/api/status/: routes.py  worker.py
app/api/user/: interface.py  openapi.py  router.py  service.py
app/api/virtuals/: service.py
app/api/web3/: provider.py
app/api/websocket/: router.py
app/blockchain/: gas.py  routes.py  scan.py
app/blockchain/services/: scan.py
app/client/: explorer.py  web3.py
app/cronjobs/: contract_scan.py  scheduler.py  testnet.py  twitter.py
app/db/: config.py  models.py
app/db/migrations/models/: 0_20250105172847_init.py  0_20250130221050_init.py  10_20250219124958_improve_intermediate_step.py  (+26 more)
app/db/models/: scan.py  terminal.py
app/lib/agents/: auditor.py  chat.py
app/lib/clients/: __init__.py  agent.py  explorer.py  llm.py  web3.py
app/lib/prompts/: gas.py  security.py
app/lib/static/: __init__.py
app/pydantic/: models.py  request.py  response.py
app/schema/: audit.py  contract.py  dependencies.py  llm.py  request.py  response.py  shared.py
app/scripts/: seeder.py
app/status/services/: worker.py
app/tasks/: eval.py  webhook.py
app/utils/: enums.py  helpers.py  mappers.py  model_parser.py  openapi.py  openapi_tags.py  typed.py  types.py
app/utils/clients/: explorer.py  llm.py  web3.py
app/utils/constants/: openapi_tags.py
app/utils/helpers/: code_parser.py  github.py  mappers.py  model_parser.py
app/utils/logger/: __init__.py
app/utils/schema/: app.py  audit.py  contract.py  dependencies.py  models.py  permission.py  prompt.py  request.py  response.py  user.py
app/utils/templates/: gas.py  security.py
app/utils/types/: common.py  enums.py  errors.py  llm.py  mixins.py  models.py  openapi.py  relations.py  shared.py
app/worker/: main.py  tasks.py
app/worker/pipelines/: audit_generation.py
grafana/: Dockerfile
grafana/provisioning/dashboards/: api.json  api_duration_histogram.json  dashboards.yml  database.json
grafana/provisioning/datasources/: datasources.yml
prometheus/: Dockerfile  prometheus.yml
scripts/: deploy-staging.sh  pre-deploy.py  pre-deploy.sh  run-migration.py  run-migration.sh  seeder.py
tests/: conftest.py  constants.py  test_admin.py  test_api.py  test_api_endpoints.py  test_app.py  test_audit.py  test_audit_service.py  test_auth.py  test_conftest.py  test_contract.py  test_contract_service.py  test_models.py  test_user.py  test_user_service.py
(+28 files in other folders)
