[tool.poetry]
name = "certaik-api"
version = "0.1.0"
description = ""
authors = [
    "Peter Simone <plssimone@gmail.com>",
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
redis = "^5.2.1"
web3 = "^7.6.1"
openai = "^1.59.2"
prometheus-client = "^0.21.1"
arq = "^0.26.3"
hypercorn = "^0.17.3"
solidity-parser = "^0.1.1"
python-json-logger = "^3.3.0"
game-sdk = "^0.1.5"

[tool.poetry.dependencies.fastapi]
extras = [
    "standard",
]
version = "^0.115.6"

[tool.poetry.dependencies.tortoise-orm]
extras = [
    "asyncpg",
]
version = "^0.23.0"

[tool.poetry.dependencies.aerich]
extras = [
    "toml",
]
version = "^0.8.1"

[tool.poetry.dependencies.tweepy]
extras = [
    "async",
]
version = "^4.14.0"

[tool.poetry.group.dev.dependencies]
rq-dashboard = "^0.8.2.2"
watchfiles = "^1.0.4"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
fakeredis = "^2.27.0"
pytest-cov = "^6.0.0"
notebook = "^7.3.2"

[tool.poetry.scripts]
migrate = "scripts.run_migration:main"
seed = "scripts.seeder:seed_command"
pre-deploy = "scripts.deploy:pre_deploy"

[tool.aerich]
tortoise_orm = "app.config.TORTOISE_ORM"
location = "app/db/migrations"
src_folder = "./."

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --log-cli-level=INFO"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
anyio_backend = "asyncio"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
