[project]
authors = [
    {name = "Peter Simone", email = "peter@bevor.io"},
    {name = "Blake Hatch", email = "blake@bevor.io"},
]
requires-python = ">=3.11"
dependencies = [
    "python-dotenv<2.0.0,>=1.0.1",
    "redis<6.0.0,>=5.2.1",
    "web3<8.0.0,>=7.6.1",
    "openai<2.0.0,>=1.59.2",
    "arq<1.0.0,>=0.26.3",
    "hypercorn<1.0.0,>=0.17.3",
    "solidity-parser<1.0.0,>=0.1.1",
    "python-json-logger<4.0.0,>=3.3.0",
    "game-sdk<1.0.0,>=0.1.5",
    "fastapi[standard]<1.0.0,>=0.115.6",
    "tortoise-orm[asyncpg]<1.0.0,>=0.23.0",
    "aerich[toml]<1.0.0,>=0.8.1",
    "logfire[fastapi]>=3.12.0",
    "pydantic-ai-slim[openai]>=0.0.55",
]
name = "bevor-ai-api"
version = "0.1.0"
description = ""
readme = "README.md"

[dependency-groups]
dev = [
    "watchfiles<2.0.0,>=1.0.4",
    "pytest<8.0.0,>=7.3.1",
    "pytest-asyncio<1.0.0,>=0.21.0",
    "pytest-cov<7.0.0,>=6.0.0",
    "fakeredis>=2.28.1",
    "notebook<8.0.0,>=7.3.2",
    "pre-commit>=4.2.0",
]

[tool.uv]
default-groups = []

[tool.aerich]
tortoise_orm = "app.config.TORTOISE_ORM"
location = "app/db/migrations"
src_folder = "./."

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --log-cli-level=INFO"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
anyio_backend = "asyncio"
